Closed Bug 1941334 Opened 28 days ago Closed 18 days ago

Crash in [@ mozilla::dom::ContentParent::CommonCreateWindow]

Categories

(GeckoView :: General, defect)

Unspecified
Android
defect

Tracking

(firefox134 unaffected, firefox135 unaffected, firefox136+ fixed)

RESOLVED FIXED
136 Branch
Tracking Status
firefox134 --- unaffected
firefox135 --- unaffected
firefox136 + fixed

People

(Reporter: dmeehan, Assigned: m_kato, NeedInfo)

References

(Regression)

Details

(Keywords: crash, regression, topcrash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/c32656ac-3162-40d4-8787-fe71d0250112

MOZ_CRASH Reason:

MOZ_RELEASE_ASSERT(false) (GeckoView should use nsIBrowserDOMWindow instead)

Top 10 frames:

0  libxul.so  {virtual override thunk({offset(-8)}, nsWindowWatcher::OpenWindowWithRemoteTa...  toolkit/components/windowwatcher/nsWindowWatcher.cpp:487
1  libxul.so  mozilla::dom::ContentParent::CommonCreateWindow(mozilla::dom::PBrowserParent*...  dom/ipc/ContentParent.cpp:5352
2  libxul.so  mozilla::dom::ContentParent::RecvCreateWindowInDifferentProcess(mozilla::dom:...  dom/ipc/ContentParent.cpp:5589
3  libxul.so  mozilla::dom::PContentParent::OnMessageReceived(IPC::Message const&)  ipc/ipdl/PContentParent.cpp:10894
4  libxul.so  mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecyc...  ipc/glue/MessageChannel.cpp:1790
4  libxul.so  mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecyclePro...  ipc/glue/MessageChannel.cpp:1717
4  libxul.so  mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, ...  ipc/glue/MessageChannel.cpp:1508
4  libxul.so  mozilla::ipc::MessageChannel::MessageTask::Run()  ipc/glue/MessageChannel.cpp:1608
5  libxul.so  mozilla::RunnableTask::Run()  xpcom/threads/TaskController.cpp:688
5  libxul.so  mozilla::TaskController::RunTask(mozilla::Task*)  xpcom/threads/TaskController.cpp:215
Flags: needinfo?(m_kato)

The bug is marked as tracked for firefox136 (nightly). However, the bug still isn't assigned.

:owlish, could you please find an assignee for this tracked bug? Given that it is a regression and we know the cause, we could also simply backout the regressor. If you disagree with the tracking decision, please talk with the release managers.

For more information, please visit BugBot documentation.

Flags: needinfo?(bugzeeeeee)

When bug 1910849 is fixed, we use release assert (https://phabricator.services.mozilla.com/D231055#8022089). But I think I should debug assert or something.

Assignee: nobody → m_kato
Flags: needinfo?(m_kato)

The bug is linked to a topcrash signature, which matches the following criterion:

  • Top 10 AArch64 and ARM crashes on nightly

For more information, please visit BugBot documentation.

Keywords: topcrash
Crash Signature: [@ mozilla::dom::ContentParent::CommonCreateWindow] → [@ mozilla::dom::ContentParent::CommonCreateWindow] [@ nsWindowWatcher::OpenWindowWithRemoteTab ]

Next week is the final week of nightly for Fx136 before it goes to beta
There is already pending need info on the Tirage Owner to triage and prioritize this.

By bug 1910849, you suggest that we use MOZ_RELEASE_ASSERT, but it
still may be called on error case. So I would like to change to
MOZ_ASSERT instead.

Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/0da4e2f4d975 Use MOZ_ASSERT in OpenWindowWithRemoteTab. r=farre
Status: NEW → RESOLVED
Closed: 18 days ago
Resolution: --- → FIXED
Target Milestone: --- → 136 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: