Bug 1941334 - Use MOZ_ASSERT in OpenWindowWithRemoteTab. r=farre

By bug 1910849, you suggest that we use `MOZ_RELEASE_ASSERT`, but it
still may be called on error case. So I would like to change to
MOZ_ASSERT instead.

Differential Revision: https://phabricator.services.mozilla.com/D234924